@@ -1,3 +1,5 @@
+* Add the native_api() method to handle simple selectors. [Diego Perini, jddalton]
+
 * Remove the `r` argument from the compiled selectors and make match() support a callback argument. [jddalton]
 
 * Make getChildIndexes() and getChildIndexesByTag() use do-while loops. [jddalton]
